--- a/estate_app/templates/estate_base.html
+++ b/estate_app/templates/estate_base.html
@@ -1,28 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Homeland &mdash; Colorlib Website Template</title>
+    <title>{% block title %}{% endblock %} - Estate App</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+    <link
+            rel="shortcut icon"
+            href="/assets/erpnext/images/erpnext-favicon.svg"
+            type="image/x-icon"
+    >
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito+Sans:200,300,400,700,900|Roboto+Mono:300,400,500">
-    <link rel="stylesheet" href="assets/estate_app/homeland/fonts/icomoon/style.css">
+    <link rel="stylesheet" href="/assets/estate_app/homeland/fonts/icomoon/style.css">
 
-    <link rel="stylesheet" href="assets/estate_app/homeland/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/estate_app/homeland/css/magnific-popup.css">
-    <link rel="stylesheet" href="assets/estate_app/homeland/css/jquery-ui.css">
-    <link rel="stylesheet" href="assets/estate_app/homeland/css/owl.carousel.min.css">
-    <link rel="stylesheet" href="assets/estate_app/homeland/css/owl.theme.default.min.css">
-    <link rel="stylesheet" href="assets/estate_app/homeland/css/bootstrap-datepicker.css">
-    <link rel="stylesheet" href="assets/estate_app/homeland/css/mediaelementplayer.css">
-    <link rel="stylesheet" href="assets/estate_app/homeland/css/animate.css">
-    <link rel="stylesheet" href="assets/estate_app/homeland/fonts/flaticon/font/flaticon.css">
-    <link rel="stylesheet" href="assets/estate_app/homeland/css/fl-bigmug-line.css">
+    <link rel="stylesheet" href="/assets/estate_app/homeland/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/assets/estate_app/homeland/css/magnific-popup.css">
+    <link rel="stylesheet" href="/assets/estate_app/homeland/css/jquery-ui.css">
+    <link rel="stylesheet" href="/assets/estate_app/homeland/css/owl.carousel.min.css">
+    <link rel="stylesheet" href="/assets/estate_app/homeland/css/owl.theme.default.min.css">
+    <link rel="stylesheet" href="/assets/estate_app/homeland/css/bootstrap-datepicker.css">
+    <link rel="stylesheet" href="/assets/estate_app/homeland/css/mediaelementplayer.css">
+    <link rel="stylesheet" href="/assets/estate_app/homeland/css/animate.css">
+    <link rel="stylesheet" href="/assets/estate_app/homeland/fonts/flaticon/font/flaticon.css">
+    <link rel="stylesheet" href="/assets/estate_app/homeland/css/fl-bigmug-line.css">
 
 
-    <link rel="stylesheet" href="assets/estate_app/homeland/css/aos.css">
+    <link rel="stylesheet" href="/assets/estate_app/homeland/css/aos.css">
 
-    <link rel="stylesheet" href="assets/estate_app/homeland/css/style.css">
+    <link rel="stylesheet" href="/assets/estate_app/homeland/css/style.css">
 
 </head>
 <body>
@@ -44,7 +49,7 @@
         <div class="container py-1">
             <div class="row align-items-center">
                 <div class="col-8 col-md-8 col-lg-4">
-                    <h1 class="mb-0"><a href="index.html" class="text-white h2 mb-0"><strong>Homeland<span class="text-danger">.</span></strong></a></h1>
+                    <h1 class="mb-0"><a href="/" class="text-white h2 mb-0"><strong>Adi Shunya<span class="text-danger">.</span></strong></a></h1>
                 </div>
                 <div class="col-4 col-md-4 col-lg-8">
                     <nav class="site-navigation text-right text-md-right" role="navigation">
@@ -53,7 +58,7 @@
 
                         <ul class="site-menu js-clone-nav d-none d-lg-block">
                             <li class="active">
-                                <a href="index.html">Home</a>
+                                <a href="/">Home</a>
                             </li>
                             <li><a href="buy.html">Buy</a></li>
                             <li><a href="rent.html">Rent</a></li>
@@ -75,7 +80,7 @@
                             </li>
                             <li><a href="blog.html">Blog</a></li>
                             <li><a href="about.html">About</a></li>
-                            <li><a href="contact.html">Contact</a></li>
+                            <li><a href="/property/contact">Contact</a></li>
                         </ul>
                     </nav>
                 </div>
@@ -157,20 +162,21 @@
 
 </div>
 
-<script src="assets/estate_app/homeland/js/jquery-3.3.1.min.js"></script>
-<script src="assets/estate_app/homeland/js/jquery-migrate-3.0.1.min.js"></script>
-<script src="assets/estate_app/homeland/js/jquery-ui.js"></script>
-<script src="assets/estate_app/homeland/js/popper.min.js"></script>
-<script src="assets/estate_app/homeland/js/bootstrap.min.js"></script>
-<script src="assets/estate_app/homeland/js/owl.carousel.min.js"></script>
-<script src="assets/estate_app/homeland/js/mediaelement-and-player.min.js"></script>
-<script src="assets/estate_app/homeland/js/jquery.stellar.min.js"></script>
-<script src="assets/estate_app/homeland/js/jquery.countdown.min.js"></script>
-<script src="assets/estate_app/homeland/js/jquery.magnific-popup.min.js"></script>
-<script src="assets/estate_app/homeland/js/bootstrap-datepicker.min.js"></script>
-<script src="assets/estate_app/homeland/js/aos.js"></script>
+<script src="/assets/estate_app/homeland/js/jquery-3.3.1.min.js"></script>
+<script src="/assets/estate_app/homeland/js/jquery-migrate-3.0.1.min.js"></script>
+<script src="/assets/estate_app/homeland/js/jquery-ui.js"></script>
+<script src="/assets/estate_app/homeland/js/popper.min.js"></script>
+<script src="/assets/estate_app/homeland/js/bootstrap.min.js"></script>
+<script src="/assets/estate_app/homeland/js/owl.carousel.min.js"></script>
+<script src="/assets/estate_app/homeland/js/mediaelement-and-player.min.js"></script>
+<script src="/assets/estate_app/homeland/js/jquery.stellar.min.js"></script>
+<script src="/assets/estate_app/homeland/js/jquery.countdown.min.js"></script>
+<script src="/assets/estate_app/homeland/js/jquery.magnific-popup.min.js"></script>
+<script src="/assets/estate_app/homeland/js/bootstrap-datepicker.min.js"></script>
+<script src="/assets/estate_app/homeland/js/aos.js"></script>
 
-<script src="assets/estate_app/homeland/js/main.js"></script>
+<script src="/assets/estate_app/homeland/js/main.js"></script>
 
+<script>frappe.csrf_token = "{{frappe.session.csrf_token}}";</script>
 </body>
 </html>
